# OpenGL_CMake_CLion_ubuntu

./: CMakeLists.txt
